Fix checks for logind

It is possible to build systemd without logind or run logind without systemd
init, in both cases testing for systemd init is wrong.  Check for
/run/systemd/seats in the parts which talk to logind instead, as recommended by
systemd upstream.

For details, see:
<https://mail.gnome.org/archives/desktop-devel-list/2013-March/msg00092.html>

https://bugzilla.gnome.org/show_bug.cgi?id=696266